fix: stabilize bbox overlay and conversion polling
- align bbox overlays with PDF.js viewport transforms across zoom levels

- poll conversion results until terminal state after SSE closes

- add JVM module access flags for PDFBox direct buffer unmapping

- bump app version to 0.8.7